--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -43,6 +43,29 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
+        android:id="@+id/malzemelerTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D0DED2"
+        android:text="MALZEMELER"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="15dp"
+        tools:layout_editor_absoluteY="231dp" />
+
+    <EditText
+        android:id="@+id/malzemelerText"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/textview_border"
+        android:hint="Buraya Yazabilirsiniz..."
+        android:inputType="textMultiLine"
+        android:scrollHorizontally="false"
+        android:text=""
+        android:textAlignment="center"
+        tools:layout_editor_absoluteX="15dp"
+        tools:layout_editor_absoluteY="170dp" />
+    <TextView
         android:id="@+id/match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +80,7 @@
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="281dp"
+        android:layout_height="250dp"
         android:layout_margin="15dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
