-Performans iyileştirmeleri -Hata giderlemeleri

--- a/app/src/main/res/layout/yemek_duzenle.xml
+++ b/app/src/main/res/layout/yemek_duzenle.xml
@@ -9,22 +9,36 @@
     android:orientation="vertical"
     tools:context=".yemekDuzenlePage">
 
-    <TextView
-        android:id="@+id/textView"
+    <EditText
+        android:id="@+id/aramaText"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#FFFF"
+        android:layout_margin="10dp"
+        android:ellipsize="end"
+        android:ems="10"
+        android:hint="Arayabilirsiniz..."
+        android:inputType="textMultiLine"
+        android:maxLines="1"
+        android:scrollHorizontally="false"
+        android:singleLine="true"
+        android:textAlignment="center"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="16dp" />
+    <Button
+        android:id="@+id/btnGuncelle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:background="#FFFFFF"
-        android:text="DÜZENLEMEK İSTEDİĞİNİZ KAYDI SEÇİNİZ"
-        android:textAlignment="center"
-        android:textStyle="bold" />
-
+        android:text="DÜZENLE " />
     <ListView
         android:id="@+id/yemekListe"
         android:listSelector="#D0DED2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:background="#FFFFFF">
 
     </ListView>
