--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_margin="25dp"
             android:background="@drawable/round"
-            android:padding="25dp"
+            android:padding="20dp"
             android:text="YENİ YEMEK" />
 
         <Button
@@ -33,7 +33,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_margin="25dp"
             android:background="@drawable/round"
-            android:padding="25dp"
+            android:padding="10dp"
             android:text="YEMEK LİSTESİ" />
 
     </GridLayout>
@@ -48,10 +48,12 @@
             android:id="@+id/btnYemekKaldir"
             android:layout_width="wrap_content"
             android:layout_height="110dp"
+            android:layout_row="0"
+            android:layout_column="0"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_margin="25dp"
+            android:layout_margin="30dp"
             android:background="@drawable/round"
-            android:padding="30dp"
+            android:padding="20dp"
             android:text="YEMEK SİL" />
 
         <Button
@@ -59,9 +61,9 @@
             android:layout_width="wrap_content"
             android:layout_height="110dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_margin="15dp"
+            android:layout_margin="25dp"
             android:background="@drawable/round"
-            android:padding="20dp"
+            android:padding="7dp"
             android:text="YEMEK DÜZENLE" />
 
     </GridLayout>
@@ -75,11 +77,11 @@
         <Button
             android:id="@+id/btnHakkinda"
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_height="90dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_margin="25dp"
             android:background="@drawable/round"
-            android:padding="15dp"
+            android:padding="20dp"
             android:text="İLETİŞİM" />
     </GridLayout>
 
