-Performans iyileştirmeleri -Hata giderlemeleri

--- a/app/src/main/res/layout/yemek_duzenle.xml
+++ b/app/src/main/res/layout/yemek_duzenle.xml
@@ -17,7 +17,7 @@
         android:layout_margin="10dp"
         android:ellipsize="end"
         android:ems="10"
-        android:hint="Arayabilirsiniz..."
+        android:hint="Yemek Adı Arayabilirsiniz..."
         android:inputType="textMultiLine"
         android:maxLines="1"
         android:scrollHorizontally="false"
@@ -35,7 +35,7 @@
         android:text="DÜZENLE " />
     <ListView
         android:id="@+id/yemekListe"
-        android:listSelector="#D0DED2"
+        android:listSelector="#79977D"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
