--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -25,8 +25,10 @@
 
     <EditText
         android:id="@+id/yemekAdiText"
+        android:editable="false"
         android:scrollHorizontally="false"
         android:layout_width="match_parent"
+        android:inputType="none"
         android:layout_height="37dp"
         android:singleLine="true"
         android:ellipsize="end"
@@ -34,7 +36,6 @@
         android:layout_margin="15dp"
         android:background="@drawable/textview_border"
         android:ems="10"
-        android:inputType="textMultiLine"
         android:text=""
         android:hint="Buraya Yazabilirsiniz..."
         android:textAlignment="center"
@@ -57,9 +58,10 @@
         android:id="@+id/malzemelerText"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:editable="false"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
-        android:inputType="textMultiLine"
+        android:inputType="none"
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
@@ -82,9 +84,10 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="15dp"
+        android:editable="false"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
-        android:inputType="textMultiLine"
+        android:inputType="none"
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
