-Resimlere resim eklenmesi sağlandı -Performans iyileştirmeleri -Hata giderlemeleri

--- a/app/src/main/res/layout/yemek_guncelle.xml
+++ b/app/src/main/res/layout/yemek_guncelle.xml
@@ -4,13 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="20dp"
-    android:background="@drawable/yeniyemekpage"
+    android:layout_margin="10dp"
+    android:background="#FFFF"
     android:orientation="vertical"
     android:gravity="top"
     tools:context=".guncelle">
 
 
+    <TextView
+        android:id="@+id/yemekResmiTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D0DED2"
+        android:text="YEMEK RESMİ"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="88dp" />
+
+    <ImageView
+        android:id="@+id/yemekResmiImageView"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:background="@android:drawable/ic_menu_add"
+    />
     <TextView
         android:id="@+id/yemekAdiTextView"
         android:layout_width="match_parent"
@@ -77,7 +94,7 @@
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="224dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
@@ -86,15 +103,33 @@
         android:textAlignment="center"
         tools:layout_editor_absoluteX="15dp"
         tools:layout_editor_absoluteY="170dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btnTemizle"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:background="@drawable/round"
+            android:backgroundTint="#D0DED2"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="TEMİZLE"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="505dp" />
     <Button
         android:id="@+id/btnYeniYemekGuncelle"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
+        android:layout_margin="20dp"
         android:background="@drawable/round"
         android:backgroundTint="#D0DED2"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:text="GÜNCELLE"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="505dp" />
+    </LinearLayout>
 </LinearLayout>
