--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -5,17 +5,33 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_margin="10dp"
-    android:background="@drawable/yeniyemekpage"
+    android:background="#FFFF"
     android:orientation="vertical"
     android:gravity="top"
     tools:context=".yemekInceleActivity">
 
+    <TextView
+        android:id="@+id/yemekResmiTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D0DED2"
+        android:text="YEMEK RESMİ"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="88dp" />
+
+    <ImageView
+        android:id="@+id/yemekResmiImageView"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:background="@android:drawable/ic_menu_add"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/yemekAdiTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:background="#D0DED2"
         android:text="YEMEK ADI"
         android:textAlignment="center"
@@ -33,7 +49,6 @@
         android:singleLine="true"
         android:ellipsize="end"
         android:maxLines="1"
-        android:layout_margin="15dp"
         android:background="@drawable/textview_border"
         android:ems="10"
         android:text=""
@@ -71,7 +86,6 @@
         android:id="@+id/match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:background="#D0DED2"
         android:text="YEMEK TARİFİ"
         android:textAlignment="center"
@@ -82,10 +96,9 @@
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_margin="15dp"
-        android:editable="false"
+        android:layout_height="326dp"
         android:background="@drawable/textview_border"
+        android:editable="false"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="none"
         android:scrollHorizontally="false"
