--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -10,22 +10,14 @@
     android:gravity="top"
     tools:context=".yemekInceleActivity">
 
-    <TextView
-        android:id="@+id/yemekResmiTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#D0DED2"
-        android:text="YEMEK RESMİ"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
 
     <ImageView
         android:id="@+id/yemekResmiImageView"
-        android:layout_width="match_parent"
+        android:layout_width="149dp"
         android:layout_height="130dp"
-        android:background="@android:drawable/ic_menu_add"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_margin="10dp"
+        android:background="@android:drawable/ic_menu_report_image"
         android:scaleType="fitXY" />
 
     <TextView
