--- a/app/src/main/res/layout/yeni_yemek_page.xml
+++ b/app/src/main/res/layout/yeni_yemek_page.xml
@@ -10,23 +10,16 @@
     android:gravity="top"
     tools:context=".yeniYemekActivity">
 
-    <TextView
-        android:id="@+id/yemekResmiTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#D0DED2"
-        android:text="YEMEK RESMİ"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
-
     <ImageView
         android:id="@+id/yemekResmiImageView"
-        android:layout_width="match_parent"
+        android:layout_width="149dp"
         android:layout_height="130dp"
-        android:background="@android:drawable/ic_menu_add"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_margin="10dp"
+        android:background="@android:drawable/ic_menu_report_image"
+        android:gravity="center"
         android:scaleType="fitXY" />
+
     <TextView
         android:id="@+id/yemekAdiTextView"
         android:layout_width="match_parent"
@@ -94,7 +87,7 @@
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="208dp"
+        android:layout_height="240dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
@@ -112,9 +105,21 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btnResim"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:background="@drawable/round"
+            android:backgroundTint="#D0DED2"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="Resim Ekle"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="505dp" />
+        <Button
             android:id="@+id/btnTemizle"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
+            android:layout_margin="10dp"
             android:background="@drawable/round"
             android:backgroundTint="#D0DED2"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -127,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:background="@drawable/round"
             android:backgroundTint="#D0DED2"
             android:text="KAYDET"
