--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="10dp"
     android:background="#FFFF"
     android:orientation="vertical"
     android:gravity="top"
-    tools:context=".yemekInceleActivity">
+    tools:context="com.yemekDefteri.yemekInceleActivity">
 
 
     <ImageView
@@ -88,7 +87,7 @@
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="475dp"
+        android:layout_height="340dp"
         android:background="@drawable/textview_border"
         android:editable="false"
         android:hint="Buraya Yazabilirsiniz..."
@@ -98,5 +97,15 @@
         android:textAlignment="center"
         tools:layout_editor_absoluteX="15dp"
         tools:layout_editor_absoluteY="170dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:adSize="FULL_BANNER"
+            app:adUnitId="ca-app-pub-2814589180123732/4676338611"></com.google.android.gms.ads.AdView>
 
+    </LinearLayout>
 </LinearLayout>
