--- a/app/src/main/res/layout/yemek_sil.xml
+++ b/app/src/main/res/layout/yemek_sil.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:background="#D0DED2"
     android:orientation="vertical"
-    tools:context=".yemekSilPage">
+    tools:context="com.yemekDefteri.yemekSilPage">
 
     <EditText
         android:id="@+id/aramaText"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#FFFF"
         android:layout_margin="10dp"
+        android:background="#FFFF"
         android:ellipsize="end"
         android:ems="10"
         android:hint="Yemek Adı Arayabilirsiniz..."
@@ -26,16 +27,14 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="17dp"
         tools:layout_editor_absoluteY="16dp" />
-    
+
     <ListView
         android:id="@+id/yemekListe"
-        android:listSelector="#79977D"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="#FFFFFF"
-        >
+        android:listSelector="#79977D">
 
     </ListView>
-
 </LinearLayout>
