--- a/app/src/main/res/layout/yemek_guncelle.xml
+++ b/app/src/main/res/layout/yemek_guncelle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -11,12 +11,14 @@
 
     <ImageView
         android:id="@+id/yemekResmiImageView"
-        android:layout_width="149dp"
-        android:layout_height="130dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_gravity="center_vertical|center_horizontal"
         android:background="@android:drawable/ic_menu_report_image"
-        android:layout_margin="10dp"
-        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiTextView"
     />
     <TextView
         android:id="@+id/yemekAdiTextView"
@@ -26,14 +28,16 @@
         android:text="YEMEK ADI"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekResmiImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiText" />
 
     <EditText
         android:id="@+id/yemekAdiText"
         android:scrollHorizontally="false"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:singleLine="true"
         android:ellipsize="end"
         android:maxLines="1"
@@ -43,9 +47,10 @@
         android:text=""
         android:hint="Buraya Yazabilirsiniz..."
         android:textAlignment="center"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerTextView" />
 
     <TextView
         android:id="@+id/malzemelerTextView"
@@ -55,48 +60,66 @@
         android:text="MALZEMELER"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerText"  />
 
     <EditText
         android:id="@+id/malzemelerText"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="100dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiTextView"  />
     <TextView
-        android:id="@+id/match_parent"
+        android:id="@+id/yemekTarifiTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#D0DED2"
         android:text="YEMEK TARİFİ"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiText" />
 
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="0dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+        >
         <Button
             android:id="@+id/btnResim"
             android:layout_width="wrap_content"
@@ -105,9 +128,7 @@
             android:backgroundTint="#D0DED2"
             android:layout_margin="10dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:text="RESİM\n EKLE/SİL"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="505dp" />
+            android:text="RESİM\n EKLE/SİL" />
         <Button
             android:id="@+id/btnTemizle"
             android:layout_width="wrap_content"
@@ -117,8 +138,7 @@
             android:layout_margin="10dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:text="TEMİZLE"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="505dp" />
+           />
     <Button
         android:id="@+id/btnYeniYemekGuncelle"
         android:layout_width="wrap_content"
@@ -127,13 +147,16 @@
         android:background="@drawable/round"
         android:backgroundTint="#D0DED2"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:text="GÜNCELLE"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="505dp" />
+        android:text="GÜNCELLE" />
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="match_parent"
@@ -142,4 +165,4 @@
             app:adUnitId="ca-app-pub-2814589180123732/4676338611"></com.google.android.gms.ads.AdView>
 
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
