--- a/app/src/main/res/layout/yemek_incele.xml
+++ b/app/src/main/res/layout/yemek_incele.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -12,12 +12,14 @@
 
     <ImageView
         android:id="@+id/yemekResmiImageView"
-        android:layout_width="149dp"
-        android:layout_height="130dp"
-        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_margin="10dp"
         android:background="@android:drawable/ic_menu_report_image"
-        android:scaleType="fitXY" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiTextView"/>
 
     <TextView
         android:id="@+id/yemekAdiTextView"
@@ -27,8 +29,10 @@
         android:text="YEMEK ADI"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekResmiImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiText"/>
 
     <EditText
         android:id="@+id/yemekAdiText"
@@ -36,7 +40,7 @@
         android:scrollHorizontally="false"
         android:layout_width="match_parent"
         android:inputType="none"
-        android:layout_height="37dp"
+        android:layout_height="40dp"
         android:singleLine="true"
         android:ellipsize="end"
         android:maxLines="1"
@@ -45,9 +49,11 @@
         android:text=""
         android:hint="Buraya Yazabilirsiniz..."
         android:textAlignment="center"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerTextView"
+        />
 
     <TextView
         android:id="@+id/malzemelerTextView"
@@ -57,8 +63,10 @@
         android:text="MALZEMELER"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerText"/>
 
     <EditText
         android:id="@+id/malzemelerText"
@@ -71,23 +79,27 @@
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiTextView" />
     <TextView
-        android:id="@+id/match_parent"
+        android:id="@+id/yemekTarifiTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#D0DED2"
         android:text="YEMEK TARİFİ"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiText"  />
 
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:background="@drawable/textview_border"
         android:editable="false"
         android:hint="Buraya Yazabilirsiniz..."
@@ -95,12 +107,19 @@
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="match_parent"
@@ -109,4 +128,4 @@
             app:adUnitId="ca-app-pub-2814589180123732/4676338611"></com.google.android.gms.ads.AdView>
 
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
