--- a/app/src/main/res/layout/yeni_yemek_page.xml
+++ b/app/src/main/res/layout/yeni_yemek_page.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFF"
-    android:orientation="vertical"
     android:gravity="top"
+    android:orientation="vertical"
     tools:context="com.yemekDefteri.yeniYemekActivity">
 
     <ImageView
         android:id="@+id/yemekResmiImageView"
-        android:layout_width="149dp"
-        android:layout_height="130dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_margin="10dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:background="@android:drawable/ic_menu_report_image"
-        android:gravity="center"
-        android:scaleType="fitXY" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiTextView"/>
 
     <TextView
         android:id="@+id/yemekAdiTextView"
@@ -27,102 +27,118 @@
         android:text="YEMEK ADI"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekResmiImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekAdiText"  />
 
     <EditText
         android:id="@+id/yemekAdiText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/textview_border"
+        android:layout_height="40dp"
         android:ellipsize="end"
         android:ems="10"
         android:hint="Buraya Yazabilirsiniz..."
-        android:inputType="textMultiLine"
         android:maxLines="1"
         android:scrollHorizontally="false"
         android:singleLine="true"
         android:text=""
         android:textAlignment="center"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerTextView" />
 
     <TextView
         android:id="@+id/malzemelerTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#D0DED2"
         android:text="MALZEMELER"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/yemekAdiText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/malzemelerText"/>
 
     <EditText
         android:id="@+id/malzemelerText"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiTextView" />
 
     <TextView
-        android:id="@+id/match_parent"
+        android:id="@+id/yemekTarifiTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#D0DED2"
         android:text="YEMEK TARİFİ"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintTop_toBottomOf="@+id/malzemelerText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/yemekTarifiText" />
 
     <EditText
         android:id="@+id/yemekTarifiText"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="0dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnResim"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_margin="10dp"
             android:background="@drawable/round"
             android:backgroundTint="#D0DED2"
-            android:layout_margin="10dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:text="RESİM\n EKLE/SİL"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="405dp" />
+            android:text="RESİM\n EKLE/SİL"/>
+
         <Button
             android:id="@+id/btnTemizle"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:layout_margin="10dp"
             android:background="@drawable/round"
             android:backgroundTint="#D0DED2"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:text="TEMİZLE"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="405dp" />
+            android:text="TEMİZLE"/>
 
         <Button
             android:id="@+id/btnYeniYemekEkle"
@@ -132,9 +148,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/round"
             android:backgroundTint="#D0DED2"
-            android:text="KAYDET"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="405dp" />
+            android:text="KAYDET"/>
 
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
