-Pdf export özelliği eklendi

--- a/app/src/main/res/layout/yemek_guncelle.xml
+++ b/app/src/main/res/layout/yemek_guncelle.xml
@@ -71,6 +71,7 @@
         android:layout_height="100dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
+        android:maxLength="300"
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
@@ -97,8 +98,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/textview_border"
-        android:hint="Buraya Yazabilirsiniz..."
+        android:hint="Buraya Yazabilirsiniz... (Max 750 Karakter)"
         android:inputType="textMultiLine"
+        android:maxLength="750"
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
