--- a/app/src/main/res/layout/yeni_yemek_page.xml
+++ b/app/src/main/res/layout/yeni_yemek_page.xml
@@ -41,6 +41,7 @@
         android:hint="Buraya Yazabilirsiniz..."
         android:maxLines="1"
         android:scrollHorizontally="false"
+        android:maxLength="25"
         android:singleLine="true"
         android:text=""
         android:textAlignment="center"
@@ -72,6 +73,7 @@
         android:scrollHorizontally="false"
         android:text=""
         android:textAlignment="center"
+        android:maxLength="300"
         app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +100,7 @@
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
+        android:maxLength="750"
         android:text=""
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
