--- a/app/src/main/res/layout/yeni_yemek_page.xml
+++ b/app/src/main/res/layout/yeni_yemek_page.xml
@@ -9,6 +9,10 @@
     android:orientation="vertical"
     tools:context="com.yemekDefteri.yeniYemekActivity">
 
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <ImageView
         android:id="@+id/yemekResmiImageView"
         android:layout_width="140dp"
